--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/FajsiEx/bude-ma-skusat#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "input": "^1.0.1"
   }
 }
